--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -117,16 +117,44 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Application_language" xml:space="preserve">
+    <value>Langue de l'application</value>
+  </data>
   <data name="Authentication" xml:space="preserve">
     <value>Authentication</value>
   </data>
   <data name="Cookie_button" xml:space="preserve">
-    <value>Accept and continue</value>
+    <value>Accepter et continuer</value>
   </data>
   <data name="Cookie_message" xml:space="preserve">
-    <value>In order to offer you the best experience, our application uses cookies. By continuing to use this application, you agree to our use of cookies.</value>
+    <value>Afin de vous offrir la meilleure expérience, notre application utilise des cookies.
+        En continuant d'utiliser cette application, vous acceptez notre utilisation des cookies.</value>
   </data>
   <data name="Copyright" xml:space="preserve">
-    <value>© 2018 All rights reserved Better Planning</value>
+    <value>© 2018 Tous droits réservés à Better Planning</value>
+  </data>
+  <data name="English" xml:space="preserve">
+    <value>Anglais</value>
+  </data>
+  <data name="Error_message_notification" xml:space="preserve">
+    <value>Une erreur est survenue lors du traitement, veuillez contacter l'administrateur.</value>
+  </data>
+  <data name="French" xml:space="preserve">
+    <value>Français</value>
+  </data>
+  <data name="Login" xml:space="preserve">
+    <value>Compte</value>
+  </data>
+  <data name="Login_application" xml:space="preserve">
+    <value>Se connecter à l'application</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>Mot de passe</value>
+  </data>
+  <data name="Successful" xml:space="preserve">
+    <value>Réussi</value>
+  </data>
+  <data name="To_log_in" xml:space="preserve">
+    <value>Se connecter</value>
   </data>
 </root>
