--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="All" xml:space="preserve">
+    <value>Tous</value>
+  </data>
   <data name="Application_language" xml:space="preserve">
     <value>Langue de l'application</value>
   </data>
@@ -125,6 +128,9 @@
   </data>
   <data name="Authentication_failed" xml:space="preserve">
     <value>Compte ou mot de passe erroné</value>
+  </data>
+  <data name="Close" xml:space="preserve">
+    <value>Fermer</value>
   </data>
   <data name="Cookie_button" xml:space="preserve">
     <value>Accepter et continuer</value>
@@ -136,6 +142,9 @@
   <data name="Copyright" xml:space="preserve">
     <value>© 2018 Tous droits réservés à &lt;b&gt;Better Planning Ltd&lt;/b&gt;</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Supprimer</value>
+  </data>
   <data name="English" xml:space="preserve">
     <value>Anglais</value>
   </data>
@@ -145,11 +154,20 @@
   <data name="Error_message_notification" xml:space="preserve">
     <value>Une erreur est survenue lors du traitement, veuillez contacter l'administrateur.</value>
   </data>
+  <data name="Form" xml:space="preserve">
+    <value>Formulaire</value>
+  </data>
   <data name="French" xml:space="preserve">
     <value>Français</value>
   </data>
+  <data name="Home" xml:space="preserve">
+    <value>Acceuil</value>
+  </data>
   <data name="Internal_error" xml:space="preserve">
     <value>Erreur interne</value>
+  </data>
+  <data name="List_of_records" xml:space="preserve">
+    <value>Liste des enregistrements</value>
   </data>
   <data name="Login" xml:space="preserve">
     <value>Compte</value>
@@ -160,6 +178,15 @@
   <data name="Main" xml:space="preserve">
     <value>Principale</value>
   </data>
+  <data name="Module_Management" xml:space="preserve">
+    <value>Gestion des modules</value>
+  </data>
+  <data name="Name" xml:space="preserve">
+    <value>Nom</value>
+  </data>
+  <data name="New" xml:space="preserve">
+    <value>Nouveau</value>
+  </data>
   <data name="Page_not_found" xml:space="preserve">
     <value>Page introuvable</value>
   </data>
@@ -168,6 +195,9 @@
   </data>
   <data name="Password" xml:space="preserve">
     <value>Mot de passe</value>
+  </data>
+  <data name="Print" xml:space="preserve">
+    <value>Imprimmer</value>
   </data>
   <data name="Process" xml:space="preserve">
     <value>Processus</value>
@@ -181,6 +211,9 @@
   <data name="Reconnect" xml:space="preserve">
     <value>Se reconnecter</value>
   </data>
+  <data name="Save" xml:space="preserve">
+    <value>Enregistrer</value>
+  </data>
   <data name="Settings" xml:space="preserve">
     <value>Paramètres</value>
   </data>
@@ -192,6 +225,9 @@
   </data>
   <data name="To_log_in" xml:space="preserve">
     <value>Se connecter</value>
+  </data>
+  <data name="Update" xml:space="preserve">
+    <value>Modifier</value>
   </data>
   <data name="Welcome" xml:space="preserve">
     <value>Bienvenue</value>
