--- a/GB/App_Lang/Lang.resx
+++ b/GB/App_Lang/Lang.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="All" xml:space="preserve">
+    <value>All</value>
+  </data>
   <data name="Application_language" xml:space="preserve">
     <value>Application language</value>
   </data>
@@ -125,6 +128,9 @@
   </data>
   <data name="Authentication_failed" xml:space="preserve">
     <value>Incorrect account or password</value>
+  </data>
+  <data name="Close" xml:space="preserve">
+    <value>Close</value>
   </data>
   <data name="Cookie_button" xml:space="preserve">
     <value>Accept and continue</value>
@@ -135,6 +141,9 @@
   <data name="Copyright" xml:space="preserve">
     <value>© 2018 All rights reserved &lt;b&gt;Better Planning Ltd&lt;/b&gt;</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
   <data name="English" xml:space="preserve">
     <value>English</value>
   </data>
@@ -144,11 +153,20 @@
   <data name="Error_message_notification" xml:space="preserve">
     <value>An error occurred while processing, please contact the administrator.</value>
   </data>
+  <data name="Form" xml:space="preserve">
+    <value>Form</value>
+  </data>
   <data name="French" xml:space="preserve">
     <value>French</value>
   </data>
+  <data name="Home" xml:space="preserve">
+    <value>Home</value>
+  </data>
   <data name="Internal_error" xml:space="preserve">
     <value>Internal error</value>
+  </data>
+  <data name="List_of_records" xml:space="preserve">
+    <value>List of records</value>
   </data>
   <data name="Login" xml:space="preserve">
     <value>Login</value>
@@ -159,6 +177,15 @@
   <data name="Main" xml:space="preserve">
     <value>Main</value>
   </data>
+  <data name="Module_Management" xml:space="preserve">
+    <value>Module management</value>
+  </data>
+  <data name="Name" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="New" xml:space="preserve">
+    <value>New</value>
+  </data>
   <data name="Page_not_found" xml:space="preserve">
     <value>Page not found</value>
   </data>
@@ -167,6 +194,9 @@
   </data>
   <data name="Password" xml:space="preserve">
     <value>Password</value>
+  </data>
+  <data name="Print" xml:space="preserve">
+    <value>Print</value>
   </data>
   <data name="Process" xml:space="preserve">
     <value>Process</value>
@@ -180,6 +210,9 @@
   <data name="Reconnect" xml:space="preserve">
     <value>Reconnect</value>
   </data>
+  <data name="Save" xml:space="preserve">
+    <value>Save</value>
+  </data>
   <data name="Settings" xml:space="preserve">
     <value>Settings</value>
   </data>
@@ -191,6 +224,9 @@
   </data>
   <data name="To_log_in" xml:space="preserve">
     <value>To log in</value>
+  </data>
+  <data name="Update" xml:space="preserve">
+    <value>Update</value>
   </data>
   <data name="Welcome" xml:space="preserve">
     <value>Welcome</value>
