- Mise à jour modules CRUD - Intégration des traitements de suppression en selection de liste. - Mise à jour version d'application. - Mise à jour du logo des modules.

--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -196,6 +196,9 @@
   <data name="No" xml:space="preserve">
     <value>Non</value>
   </data>
+  <data name="No_item_selected" xml:space="preserve">
+    <value>Aucun élement selectionné</value>
+  </data>
   <data name="Object_not_found" xml:space="preserve">
     <value>Objet introuvable</value>
   </data>
