- Supression du bouton de modification de ligne - Définition de la selection de la ligne - Suppression du striped sur la table - Correction du bug d'afficharge de l'alert de confirmation - Mise à jour version d'application

--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -160,6 +160,9 @@
   <data name="Error_server_message" xml:space="preserve">
     <value>Une erreur de communication est survenu</value>
   </data>
+  <data name="Existing_data" xml:space="preserve">
+    <value>Donnée existante</value>
+  </data>
   <data name="Form" xml:space="preserve">
     <value>Formulaire</value>
   </data>
