- Intégration du menu 'menu' - Mise à jour de l'entête utilisateur. - Mise à jour version d'application.

--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -187,6 +187,9 @@
   <data name="Main" xml:space="preserve">
     <value>Principale</value>
   </data>
+  <data name="Menu_Management" xml:space="preserve">
+    <value>Gestion des menus</value>
+  </data>
   <data name="Module_Management" xml:space="preserve">
     <value>Gestion des modules</value>
   </data>
