--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -187,6 +187,9 @@
   <data name="Main" xml:space="preserve">
     <value>Principale</value>
   </data>
+  <data name="Menu_group" xml:space="preserve">
+    <value>Groupe de menus</value>
+  </data>
   <data name="Menu_Management" xml:space="preserve">
     <value>Gestion des menus</value>
   </data>
@@ -238,6 +241,9 @@
   <data name="Save" xml:space="preserve">
     <value>Enregistrer</value>
   </data>
+  <data name="Select" xml:space="preserve">
+    <value>Selectionner</value>
+  </data>
   <data name="Settings" xml:space="preserve">
     <value>Paramètres</value>
   </data>
@@ -252,6 +258,9 @@
   </data>
   <data name="Update" xml:space="preserve">
     <value>Modifier</value>
+  </data>
+  <data name="Views" xml:space="preserve">
+    <value>Vues</value>
   </data>
   <data name="Welcome" xml:space="preserve">
     <value>Bienvenue</value>
