- Creation du package de test - Creation du fichier JSON de la base de données - Creation du package DAO - Correction du beug sur le fomulaire Menu - Vérrou du formulaire à l'afficharge de l'alert de confirmation - Mise à jour du CSS sur les menus - Suppression de 'Liste des enregistrements' sur tous les menus - Suppression de l'icone sur le bouton d'authentification - Suppression du profil utilisateur sur la barre des menus - Mise à jour version d'application

--- a/GB/App_Lang/Lang.resx
+++ b/GB/App_Lang/Lang.resx
@@ -267,4 +267,7 @@
   <data name="Yes" xml:space="preserve">
     <value>Yes</value>
   </data>
+  <data name="Rules" xml:space="preserve">
+    <value>Rules</value>
+  </data>
 </root>
