--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -268,4 +268,7 @@
   <data name="Yes" xml:space="preserve">
     <value>Oui</value>
   </data>
+  <data name="Rules" xml:space="preserve">
+    <value>Rôles</value>
+  </data>
 </root>
