--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -271,4 +271,40 @@
   <data name="Rules" xml:space="preserve">
     <value>Rôles</value>
   </data>
+  <data name="Add" xml:space="preserve">
+    <value>Ajouter</value>
+  </data>
+  <data name="Disable" xml:space="preserve">
+    <value>Désactiver</value>
+  </data>
+  <data name="Enable" xml:space="preserve">
+    <value>Activer</value>
+  </data>
+  <data name="Listing" xml:space="preserve">
+    <value>Lister</value>
+  </data>
+  <data name="Modify" xml:space="preserve">
+    <value>Modifier</value>
+  </data>
+  <data name="Privilege_management" xml:space="preserve">
+    <value>Gestion des privilèges</value>
+  </data>
+  <data name="Role_and_privilege_management" xml:space="preserve">
+    <value>Gestion des rôles et privilèges</value>
+  </data>
+  <data name="Search" xml:space="preserve">
+    <value>Rechercher</value>
+  </data>
+  <data name="Search_a_role" xml:space="preserve">
+    <value>Rechercher un rôle</value>
+  </data>
+  <data name="Search_by" xml:space="preserve">
+    <value>Rechercher par</value>
+  </data>
+  <data name="Delete_menus" xml:space="preserve">
+    <value>Supprimer les menus</value>
+  </data>
+  <data name="New_menus" xml:space="preserve">
+    <value>Nouveaux menus</value>
+  </data>
 </root>
