--- a/GB/App_Lang/Lang.resx
+++ b/GB/App_Lang/Lang.resx
@@ -306,4 +306,22 @@
   <data name="New_menus" xml:space="preserve">
     <value>New menus</value>
   </data>
+  <data name="Add_" xml:space="preserve">
+    <value>Add</value>
+  </data>
+  <data name="Del_" xml:space="preserve">
+    <value>Del</value>
+  </data>
+  <data name="Display" xml:space="preserve">
+    <value>Display</value>
+  </data>
+  <data name="Lst_" xml:space="preserve">
+    <value>Lst</value>
+  </data>
+  <data name="Mod_" xml:space="preserve">
+    <value>Mod</value>
+  </data>
+  <data name="Prt_" xml:space="preserve">
+    <value>Prt</value>
+  </data>
 </root>
