- Activation du bouton d'enregistrement des autorisations modifié - Intégration du plugins pnotify - Mise à jour de la gestion du panier des menus - Intégration des traitement d'autorisation d'action - Mise à jour version d'application

--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -325,4 +325,16 @@
   <data name="Prt_" xml:space="preserve">
     <value>Imp</value>
   </data>
+  <data name="Necessary_privilege_loading_action" xml:space="preserve">
+    <value>Action de chargement de privilège nécessaire</value>
+  </data>
+  <data name="Permission_denied" xml:space="preserve">
+    <value>Autorisation refusée</value>
+  </data>
+  <data name="Permission_to_list_records_denied" xml:space="preserve">
+    <value>Autorisation de lister les enregistrements refusés</value>
+  </data>
+  <data name="No_changes_have_been_made" xml:space="preserve">
+    <value>Aucune modification n'a été effectuée</value>
+  </data>
 </root>
