--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -562,4 +562,22 @@
   <data name="Path_last_backup" xml:space="preserve">
     <value>Dernier lien de sauvegarde</value>
   </data>
+  <data name="Amount" xml:space="preserve">
+    <value>Montant</value>
+  </data>
+  <data name="Amount_max" xml:space="preserve">
+    <value>Montant max</value>
+  </data>
+  <data name="Amount_min" xml:space="preserve">
+    <value>Montant min</value>
+  </data>
+  <data name="Currency" xml:space="preserve">
+    <value>Currency</value>
+  </data>
+  <data name="Management_of_banking_parameters" xml:space="preserve">
+    <value>Gestion des paramètres bancaires</value>
+  </data>
+  <data name="Rate" xml:space="preserve">
+    <value>Taux</value>
+  </data>
 </root>
