- AJout du champ date de création à la vue produit judiciare. - Mise à jour version de l'application.

--- a/GB/App_Lang/Lang.fr.resx
+++ b/GB/App_Lang/Lang.fr.resx
@@ -610,4 +610,7 @@
   <data name="Unpaid" xml:space="preserve">
     <value>Impayé</value>
   </data>
+  <data name="Creation_date" xml:space="preserve">
+    <value>Date de création</value>
+  </data>
 </root>
